--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -53,7 +53,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="suscripciones.html">Suscripciones</a></li>
                     </ul>
-                    <form class="d-flex" method="get" action="Carrito.html">
+                    <form class="d-flex" method="get" action="carrito.html">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Carrito
@@ -83,7 +83,7 @@
 
         <!--Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Nuevo Edén 2022</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Nuevo Edén 2022 </br>Aerith's house (Final Fantasy 7) By Clémence Maurer</p></div>
         </footer>
     </div>
 
