--- a/frontend/templates/carrito.html
+++ b/frontend/templates/carrito.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -13,8 +14,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <link href="css/carrito.css" type="text/css" rel="Stylesheet">
+    <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
+    <link href="{% static 'css/carrito.css'%}" type="text/css" rel="Stylesheet">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -51,7 +52,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="suscripciones.html">Suscripciones</a></li>
                     </ul>
-                    <form class="d-flex" method="get" action="Carrito.html">
+                    <form class="d-flex" method="get" action="carrito.html">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Carrito
@@ -81,7 +82,7 @@
             <div class="cart">       
                 <div class="products">        
                     <div class="product">       
-                        <img src="Imagenes/aspersor1.jpg">
+                        <img src="{% static 'Imagenes/aspersor1.jpg'%}">
                         <div class="product-info">
                             <h3 class="product-name">Aspersor Rectangular</h3>
                             <h4 class="product-price">$39.990</h4>
@@ -93,7 +94,7 @@
                         </div>
                     </div>
                     <div class="product">
-                        <img src="Imagenes/tijera4.jpg">
+                        <img src="{% static 'Imagenes/tijera4.jpg'%}">
                         <div class="product-info">
                             <h3 class="product-name">Tijera Podar Smooth</h3>
                             <h4 class="product-price">$29.990</h4>
@@ -105,7 +106,7 @@
                         </div>
                     </div>
                     <div class="product">
-                        <img src="Imagenes/maceta4.jpg">
+                        <img src="{% static 'Imagenes/maceta4.jpg'%}">
                         <div class="product-info">
                             <h3 class="product-name">Macetero Biodegradable Alto Gris Grafito</h3>
                             <h4 class="product-price">$6.390</h4>
@@ -155,7 +156,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js'%}"></script>
     
     </body>
 </html>
