--- a/frontend/templates/fertilizante.html
+++ b/frontend/templates/fertilizante.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -9,11 +10,11 @@
         type = "image/x-icon">
     <title>Nuevo Edén</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="estilos.css" type="text/css" rel="Stylesheet">
-    <link href="css/productos.css" type="text/css" rel="Stylesheet">
+    <link href="{% static 'estilos.css'%}" type="text/css" rel="Stylesheet">
+    <link href="{% static 'css/productos.css'%}" type="text/css" rel="Stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
 
     <body>
         <!--NavBar-->
@@ -47,7 +48,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="suscripciones.html">Suscripciones</a></li>
                     </ul>
-                    <form class="d-flex" method="get" action="Carrito.html">
+                    <form class="d-flex" method="get" action="carrito.html">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Carrito
@@ -101,8 +102,8 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
-        <script src="./js/api.js"></script>
+        <script src="{% static 'js/scripts.js'%}"></script>
+        <script src="{% static './js/api.js'%}"></script>
     
     </body>
 </html>
