--- a/frontend/templates/nosotros.html
+++ b/frontend/templates/nosotros.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -9,13 +10,13 @@
         type = "image/x-icon">
     <title>Nuevo Edén</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="estilos.css" type="text/css" rel="Stylesheet">
-    <link href="css/nosotros.css" type="text/css" rel="Stylesheet">
+    <link href="{% static 'estilos.css'%}" type="text/css" rel="Stylesheet">
+    <link href="{% static 'css/nosotros.css'%}" type="text/css" rel="Stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
 
     <body>
         <!--NavBar-->
@@ -49,7 +50,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="suscripciones.html">Suscripciones</a></li>
                     </ul>
-                    <form class="d-flex" method="get" action="Carrito.html">
+                    <form class="d-flex" method="get" action="carrito.html">
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Carrito
@@ -81,7 +82,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card">
-                            <img src="Imagenes/Xokas_1.png" alt="No soy el Xokas" style="width:100%">
+                            <img src="{% static 'Imagenes/Xokas_1.png'%}" alt="No soy el Xokas" style="width:100%">
                             <div class="container">
                             <h2>Gabriel Cárcamo</h2>
                             <p class="title">CEO & Founder</p>
@@ -93,7 +94,7 @@
                         </div>
                     <div class="col">
                         <div class="card">
-                            <img src="Imagenes/Xokas_1.png" alt="No soy el Xokas" style="width:100%">
+                            <img src="{% static 'Imagenes/Xokas_1.png'%}" alt="No soy el Xokas" style="width:100%">
                             <div class="container">
                             <h2>Zhihao He</h2>
                             <p class="title">CEO & Founder</p>
@@ -105,7 +106,7 @@
                         </div>                            
                     <div class="col">
                         <div class="card">
-                            <img src="Imagenes/Xokas_1.png" alt="No soy el Xokas" style="width:100%">
+                            <img src="{% static 'Imagenes/Xokas_1.png'%}" alt="No soy el Xokas" style="width:100%">
                             <div class="container">
                             <h2>Xokas</h2>
                             <p class="title">Bussiness man</p>
@@ -140,7 +141,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="{% static 'js/scripts.js'%}"></script>
     
     </body>
 </html>
