--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -81,7 +81,13 @@
   
         <img src="{% static './Imagenes/Aerith_house.png' %}">
 
-
+        {% for foto in fotos %}
+        <div>
+            {{foto.nombreFoto}}
+            <img src="{% static './Imagenes/'%}{{foto.nombreArchivo}}" height = "300" width="200">
+            {{foto.descripcion}}
+        </div>
+        {% endfor %}
             
     <!--Footer-->
         <footer class="py-5 bg-dark">
