--- a/back/templates/login_back.html
+++ b/back/templates/login_back.html
@@ -19,7 +19,27 @@
     <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
-    
+    <style>
+        body {
+  margin: 0;
+  padding: 0;
+  background-color: #17a2b8;
+  height: 100vh;
+}
+#login .container #login-row #login-column #login-box {
+  margin-top: 120px;
+  max-width: 600px;
+  height: 320px;
+  border: 1px solid #9C9C9C;
+  background-color: #EAEAEA;
+}
+#login .container #login-row #login-column #login-box #login-form {
+  padding: 20px;
+}
+#login .container #login-row #login-column #login-box #login-form #register-link {
+  margin-top: -85px;
+}
+    </style>
 
 
 
@@ -72,44 +92,36 @@
             </div>
         </nav>
         <!--Login-->
-        <div class="login-page">
-        
-            <!--Login-->
+        <div id="login">
+            <h3 class="text-center text-white pt-5">Login form</h3>
             <div class="container">
-                <div class="row">
-                    <div class="col">               
-                        <div class="shadow-lg p-3 mb-5 mt-4 bg-body rounded">                                    
-                            <div class="p-3 mb-2 bg-primary bg-gradient fw-bold text-white text-center">Iniciar Sesión</div>
-                            <form class="row g-3 needs-validation" action="validarUsuario/" novalidate>
+                <div id="login-row" class="row justify-content-center align-items-center">
+                    <div id="login-column" class="col-md-6">
+                        <div id="login-box" class="col-md-12">
+                            <form id="login-form" class="form" action="validarUsuario/" method="post">
                                 {% csrf_token %}
+                                <h3 class="text-center text-info">Login</h3>
                                 <div class="form-group">
-        
+                                    <label for="email" class="text-info">Email:</label><br>
+                                    <input type="email" name="email" id="email" class="form-control">
                                 </div>
                                 <div class="form-group">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="name" placeholder="Ingresa un nombre de usuario" required>
-                                <!-- Mensajes para validación   -->
-                                <div class="valid-feedback">¡Campo válido!</div>
-                                <div class="invalid-feedback">Debe completar los datos.</div>
-                                
-                                </div>                                             
+                                    <label for="password" class="text-info">Password:</label><br>
+                                    <input type="password" name="password" id="password" class="form-control">
+                                </div>
+                                <br>
                                 <div class="form-group">
-                                    <label for="apellido" class="form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="pass" placeholder="Ingrese su contraseña" required>
-                                    <!-- Mensajes para validación   -->
-                                    <div class="valid-feedback">¡Campo válido!</div>
-                                    <div class="invalid-feedback">Debe completar los datos.</div>
-                                </div> 
-
-                                <button class="btn btn-warning fw-bold" type="submit">Iniciar</button>   
-                                <p class="message">Todavia no tiene una cuenta? <a href="registro.html">Crear cuenta </a></p>                    
+                                
+                                    <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                </div>
+                               
                             </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <script src="{% static 'js/ini.js'%}"></script>
+
 
 
 
@@ -130,27 +142,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="{% static 'js/scripts.js'%}"></script>
     
-        <script>        
-            (function () {  
-              'use strict'
-            
-              // Obtener todos los formularios a los que queremos aplicar estilos de validación de Bootstrap personalizados
-              var forms = document.querySelectorAll('.needs-validation')
-            
-              //Recorremos los forms y evitamos en envío sin validacion
-              Array.prototype.slice.call(forms)
-                .forEach(function (form) {
-                  form.addEventListener('submit', function (event) {
-                    if (!form.checkValidity()) {
-                      event.preventDefault()
-                      event.stopPropagation()
-                    }
-                    form.classList.add('was-validated')
-                  }, false)
-                })
-            })()
-                </script>
-
 
     </body>
 </html>
