--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -79,10 +79,8 @@
                 </div>
             </header>
   
-        {% for foto in fotos %}
-        {{foto.descripcion}}
-        <img src="{% static './Imagenes/' %}{{foto.nombreArchivo}}" height="300" width="200">
-        {% endfor %}
+    <!--Banner-->
+        <img src="{% static 'Imagenes/Aerith_house.png' %}" alt="banner" class="img-fluid">
 
             
     <!--Footer-->
