--- a/frontend/templates/index_back.html
+++ b/frontend/templates/index_back.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +12,14 @@
     <title>Nuevo Edén</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="{% static 'estilos.css'%}" type="text/css" rel="Stylesheet">
-    <link href="{% static 'css/ini.css'%}" type="text/css" rel="Stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="{% static 'css/styles.css'%}" rel="stylesheet" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.js"></script>
+
+</head>
 
     <body>
         <!--NavBar-->
@@ -68,44 +69,27 @@
                 </div>
             </div>
         </nav>
-        <!--Login-->
-        <div id="login">
-            <h3 class="text-center text-black pt-5">Iniciar Sesion</h3>
-            <div class="container">
-                <div id="login-row" class="row justify-content-center align-items-center">
-                    <div id="login-column" class="col-md-6">
-                        <div id="login-box" class="col-md-12">
-                            <form id="login-form" class="form" action="/validarUsuario/" method="post">
-                                {% csrf_token %}
-                                <h3 class="text-center">Inicio    </h3>
-                                <div class="form-group">
-                                    <label for="email" >Email:</label><br>
-                                    <input type="email" name="email" id="email" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label for="password">Contraseña:</label><br>
-                                    <input type="password" name="password" id="password" class="form-control">
-                                </div>
-                                <br>
-                                <div class="form-group">
-                                
-                                    <input type="submit" name="Inicio" class="btn btn-info btn-md" value="Iniciar">
-                                </div>
-                               
-                            </form>
-                        </div>
+            <!--Header-->
+            <header class="bg-dark py-5">
+                <div class="container px-4 px-lg-5 my-5">
+                    <div class="text-center text-white">
+                        <h1 class="display-4 fw-bolder">WENA PO NUEVO USUARIO</h1>
+                        <p class="lead fw-normal text-white-50 mb-0"></p>
                     </div>
                 </div>
-            </div>
-        </div>
+            </header>
+  
+        {% for foto in fotos %}
+        {{foto.descripcion}}
+        <img src="{% static './Imagenes/' %}{{foto.nombreArchivo}}" height="300" width="200">
+        {% endfor %}
 
-
-
-        <!--Footer-->
+            
+    <!--Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Nuevo Edén 2022</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Nuevo Edén 2022 </br>Aerith's house (Final Fantasy 7) By Clémence Maurer</p></div>
         </footer>
-        </div>
+    </div>
 
 
 
@@ -116,8 +100,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="{% static 'js/scripts.js'%}"></script>
     
-
     </body>
 </html>
