--- a/frontend/templates/index_back.html
+++ b/frontend/templates/index_back.html
@@ -79,10 +79,8 @@
                 </div>
             </header>
   
-        {% for foto in fotos %}
-        {{foto.descripcion}}
-        <img src="{% static './Imagenes/' %}{{foto.nombreArchivo}}" height="300" width="200">
-        {% endfor %}
+        
+            <img src="{% static './Imagenes/Aerith_house.png'%}" >
 
             
     <!--Footer-->
