--- a/frontend/templates/carrito.html
+++ b/frontend/templates/carrito.html
@@ -51,6 +51,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="suscripciones.html">Suscripciones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="añadir.html">API</a></li>
                     </ul>
                     <form class="d-flex" method="get" action="carrito.html">
                         <button class="btn btn-outline-dark" type="submit">
