--- a/frontend/templates/tijeras.html
+++ b/frontend/templates/tijeras.html
@@ -47,6 +47,7 @@
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="suscripciones.html">Suscripciones</a></li>
+                        <li class="nav-item"><a class="nav-link" href="añadir.html">API</a></li>
                     </ul>
                     <form class="d-flex" method="get" action="carrito.html">
                         <button class="btn btn-outline-dark" type="submit">
@@ -87,7 +88,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">{{productos.nombreProducto}}</h5>
+                                    <h5 class="fw-bolder">{{productos.nombre}}</h5>
                                     </br>{{productos.descripcion}}
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
