--- a/frontend/templates/modificar.html
+++ b/frontend/templates/modificar.html
@@ -77,6 +77,16 @@
                     value="{{producto.nombre}}">
                 </div>
                 <div class="form-group">
+                    <label for="archivoImg">Imagen</label>
+                    <input type="text" id="archivoImg" name="archivoImg" class="form-control"
+                    value="{{producto.archivoImg}}">
+                </div>
+                <div class="form-group">
+                    <label for="descripcion">Descripción producto</label>
+                    <input type="text" id="descripcion" name="descripcion" class="form-control"
+                    value="{{producto.descripcion}}">
+                </div>
+                <div class="form-group">
                     <label for="precio">Precio producto</label>
                     <input type="number" id="precio" name="precio" class="form-control"
                     value="{{producto.precio}}">
@@ -84,8 +94,7 @@
                 <div class="form-group">
                     <label for="stock">Stock producto</label>
                     <input type="number" id="stock" name="stock" class="form-control"
-                    value="{{categoria.nombreCategoria}}">
-                </div>
+                    value="{{producto.stock}}">
                 <br>
                 <div class="form-group">
                     <input type="submit" class="btn btn-primary" id="enviar" value="Enviar">
